--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .env
-cas-stronghold-bot/cas-bot-api-gdrive.json
-cas-stronghold-bot/cas-bot-api-gsheet.json
+cas-bot-api-gsheet.json
+cas-bot-api-gdrive.json
 
 
 __pycache__/
