--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,9 +30,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.PIP_CACHE_DIR }}
-          key: "python-0-${{ runner.os }}-\
-          ${{ steps.python.outputs.python-version }}-\
-          ${{ hashFiles('./pyproject.toml', './poetry.lock') }}"
+          key: "python-0-${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{ hashFiles('./pyproject.toml', './poetry.lock') }}"
 
       - name: Install dependencies
         run: |
@@ -58,8 +56,7 @@ jobs:
         # this check ensures that black always runs if the pre-commit step ran
         # Its best to only have to fix pre-commit once than twice
         if: always() && (steps.pre-commit.outcome == 'success' || steps.pre-commit.outcome == 'failure')
-        run: "poetry run flake8 \
-        --format='::error file=%(path)s,line=%(row)d,col=%(col)d::[flake8] %(code)s: %(text)s'"
+        run: "poetry run flake8 --format='::error file=%(path)s,line=%(row)d,col=%(col)d::[flake8] %(code)s: %(text)s'"
 
       # Run black
       - name: Run black
