Fixed pre-commit hook config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,6 @@ repos:
         name: Flake8
         description: Lints this repository using flake8.
         language: system
-        entry: poetry run python -m flake8
+        entry: python -m flake8
         require_serial: true
         pass_filenames: false
