Added flake8 to install dependencies step on workflows

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install poetry
+          pip install poetry flake8
           poetry install
 
       # We will not run `black` or `flake8` here, as we will use a separate
